# local_indexing_mcp

./: .gitignore  AI_CODING_INSTRUCTIONS.md  AI_PROJECT_SPECIFIC_INSTRUCTIONS.md  CODING_INSTRUCTIONS.md  Makefile  PROJECT-SPECIFIC-INSTRUCTIONS.md  PROJECT_SPECIFIC_INSTRUCTIONS.md  README.md  config.example.json  main.py  pyproject.toml  pytest.ini
client_demo/: DEMO_SUMMARY.md  README.md  config_manager.py  demo_config.json  mcp_inspector_demo.py  requirements.txt  simple_demo.py  verify_demo.py
client_demo/sample_documents/: README.md  config_guide.txt  example.py  machine_learning.md  notes.txt  python_tutorial.txt  sample_code.py
scripts/: check_code_quality.py  clean_blank_lines.py  clean_project.py  diagnose_mcp.py  init_db.sql  run_tests.py  test.bat  test.sh
src/: __init__.py  config.py  database.py  exceptions.py  file_utils.py  indexer.py  models.py  search.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_exceptions.py  test_file_utils.py  test_indexer.py  test_integration.py  test_models.py  test_search.py
